# smac-tools

./: .gitignore  CMakeLists.txt  Readme.md  test-vectors.txt
src/: CMakeLists.txt  aes.hpp  mac_universal.cpp  ortools_kit.hpp  sbox_espresso.hpp  smac_demo.cpp  smac_refcode.h  smac_testvectors.h
src/3rd/: CMakeLists.txt
